--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
     <string name="remainder">Remainder</string>
     <string name="rate_us">Rate Us</string>
     <string name="feedback">Feedback</string>
+    <string name="send">Send</string>
+    <string name="feedback_">Feedback...</string>
+    <string name="opinion">I will be happy to know your opinion\n about my first App</string>
 </resources>
