--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,7 @@
     <string name="target_weight">Target weight</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="_0">0</string>
+    <string name="edit_current_weight">Edit current weight</string>
+    <string name="set_weight">Set Weight</string>
+    <string name="current_date">Current Date</string>
 </resources>
