--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="rate_us">Rate Us</string>
     <string name="feedback">Feedback</string>
     <string name="send">Send</string>
-    <string name="feedback_">Feedback...</string>
+    <string name="feedback_">Feedback…</string>
     <string name="opinion">I will be happy to know your opinion\n about my first App</string>
     <string name="communicate_wit_us">Communicate wit us</string>
     <string name="share_with_friends">Share with friends</string>
@@ -30,7 +30,7 @@
     <string name="gmail">Gmail</string>
     <string name="whatsapp">WhatsApp</string>
     <string name="phone_call">Phone Call</string>
-    <string name="enter_date">Enter your date to remainder...</string>
+    <string name="enter_date">Enter your date to remainder…</string>
     <string name="set_remainder">Set Remainder</string>
     <string name="cancel">Cancel</string>
     <string name="message">message</string>
@@ -61,4 +61,12 @@
     <string name="task_description">Task Description</string>
     <string name="add_new_task">Add New Task</string>
     <string name="add">Add</string>
+    <string name="abs">ABS</string>
+    <string name="arms">Arms</string>
+    <string name="custom">Custom</string>
+    <string name="legs">Legs</string>
+    <string name="rate">Rate</string>
+    <string name="short_trainings">Short Trainings</string>
+    <string name="create_new_task">Create new Task</string>
+    <string name="exit">Exit</string>
 </resources>
