--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,4 +69,9 @@
     <string name="short_trainings">Short Trainings</string>
     <string name="create_new_task">Create new Task</string>
     <string name="exit">Exit</string>
+    <string name="settings">Settings</string>
+    <string name="search">Search</string>
+    <string name="_2500">/2500</string>
+    <string name="_10000">/10000</string>
+    <string name="walk_counter">Walk Counter</string>
 </resources>
