--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -79,4 +79,35 @@
     <string name="password">Password</string>
     <string name="email">Email</string>
     <string name="_null">null</string>
+    <string name="language">Language</string>
+    <string name="english">English</string>
+    <string name="armenian">Հայերեն</string>
+    <string name="russian">Русский</string>
+    <string name="set_language">Set Language</string>
+    <string name="change_language">Change Language</string>
+    <string name="exit_">Exit?</string>
+    <string name="ok">Ok</string>
+    <string name="cancel_">Cancel</string>
+    <string name="female">Female</string>
+    <string name="male">Male</string>
+    <string name="wrongEmail">wrong email</string>
+    <string name="WrongPassword">wrong password</string>
+    <string name="WrongInputs">Wrong inputs</string>
+    <string name="withUppercase">Name must start with Uppercase letter</string>
+    <string name="ageSize">Age must be higher 10 and lower 80</string>
+    <string name="weightSize">Weight must be higher 49 and lower 200</string>
+    <string name="heightSize">Height must be higher 129 and lower 260</string>
+    <string name="wrongEmail_">Wrong Email format, try again with right one!</string>
+    <string name="passwordWrong">Password must be longer than 8 sym., contain one uppercase, one lowercase, one letter and one sym.</string>
+    <string name="shotr">Short</string>
+    <string name="myTrainings">My Trainings</string>
+    <string name="tasks">Tasks</string>
+    <string name="set">Set</string>
+    <string name="restStepsCounter">Long tap to rest steps</string>
+    <string name="rating">\"Rating :: \"</string>
+    <string name="totalStars">\"Total Stars:: \"</string>
+    <string name="notFound">Not Found</string>
+    <string name="deleteItem">Delete this item?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 </resources>
